[gd_scene load_steps=7 format=3 uid="uid://dcsfg37xqpp46"]

[ext_resource type="Script" path="res://Scripts/s_levels.gd" id="1_2gqs8"]
[ext_resource type="Script" path="res://Scripts/Load.gd" id="2_n8kuj"]
[ext_resource type="FontFile" uid="uid://js2f4i4dy27b" path="res://Font/EightBits.ttf" id="2_q0o3b"]

[sub_resource type="Animation" id="Animation_bexgm"]
resource_name = "FadeIn"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Overlay:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(0, 0, 0, 0), Color(0, 0, 0, 1)]
}

[sub_resource type="Animation" id="Animation_hstet"]
resource_name = "FadeOut"
length = 2.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Overlay:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(0, 0, 0, 1), Color(0, 0, 0, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_82dgc"]
_data = {
"FadeIn": SubResource("Animation_bexgm"),
"FadeOut": SubResource("Animation_hstet")
}

[node name="SLevels" type="Node2D"]
script = ExtResource("1_2gqs8")
metadata/_edit_horizontal_guides_ = [-243.0]

[node name="Load" type="Node" parent="."]
process_mode = 3
script = ExtResource("2_n8kuj")

[node name="Tutorial" type="Button" parent="."]
anchors_preset = 9
anchor_bottom = 1.0
offset_left = 100.0
offset_top = 45.0
offset_right = 333.0
offset_bottom = 153.0
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_fonts/font = ExtResource("2_q0o3b")
theme_override_font_sizes/font_size = 100
text = "Tutorial"

[node name="Level1" type="Button" parent="."]
anchors_preset = 9
anchor_bottom = 1.0
offset_left = 400.0
offset_top = 745.0
offset_right = 633.0
offset_bottom = 853.0
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_fonts/font = ExtResource("2_q0o3b")
theme_override_font_sizes/font_size = 100
text = "Level1"

[node name="Level2" type="Button" parent="."]
anchors_preset = 9
anchor_bottom = 1.0
offset_left = 700.0
offset_top = 745.0
offset_right = 933.0
offset_bottom = 853.0
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_fonts/font = ExtResource("2_q0o3b")
theme_override_font_sizes/font_size = 100
text = "Level?"

[node name="Level3" type="Button" parent="."]
anchors_preset = 9
anchor_bottom = 1.0
offset_left = 99.0
offset_top = 745.0
offset_right = 332.0
offset_bottom = 853.0
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_fonts/font = ExtResource("2_q0o3b")
theme_override_font_sizes/font_size = 100
text = "Level!"

[node name="Level3+1" type="Button" parent="."]
anchors_preset = 9
anchor_bottom = 1.0
offset_left = 396.0
offset_top = 745.0
offset_right = 629.0
offset_bottom = 853.0
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_fonts/font = ExtResource("2_q0o3b")
theme_override_font_sizes/font_size = 100
text = "Level?!"

[node name="Load2" type="Button" parent="."]
offset_left = 918.0
offset_top = -1.0
offset_right = 1002.0
offset_bottom = 67.0
theme_override_fonts/font = ExtResource("2_q0o3b")
theme_override_font_sizes/font_size = 60
text = "Load"

[node name="Save" type="Button" parent="."]
offset_left = 815.0
offset_top = 1.0
offset_right = 903.0
offset_bottom = 69.0
theme_override_fonts/font = ExtResource("2_q0o3b")
theme_override_font_sizes/font_size = 60
text = "Save"

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_82dgc")
}

[node name="Overlay" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(0, 0, 0, 0)

[connection signal="pressed" from="Tutorial" to="." method="_on_button_pressed"]
[connection signal="pressed" from="Level1" to="." method="_on_button_2_pressed"]
[connection signal="pressed" from="Level2" to="." method="_on_level_2_pressed"]
[connection signal="pressed" from="Level3" to="." method="_on_level_3_pressed"]
[connection signal="pressed" from="Level3+1" to="." method="_on_level_31_pressed"]
[connection signal="pressed" from="Load2" to="Load" method="_on_load_2_pressed"]
[connection signal="pressed" from="Save" to="." method="_on_save_pressed"]
